# Automated-Video-Editing-Agent

auto_agent/: README.md  app.py  demo.ipynb  pyproject.toml
auto_agent/full/: workflow.py
auto_agent/src/: audio_enhancing.py  promptparsing.py  scene_scorer.py  transition_planning.py  video_rendering.py  videoprocessing.py
