[project]
name = "auto-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ffmpeg-python>=0.2.0",
    "groq>=0.30.0",
    "ipykernel>=6.30.0",
    "librosa>=0.11.0",
    "opencv-python>=4.12.0.88",
    "pytube>=15.0.0",
    "scenedetect>=0.6.6",
    "streamlit>=1.47.1",
    "videodb>=0.2.16",
    "yt-dlp>=2025.7.21",
]
